--- a/templates/gouwuche.html
+++ b/templates/gouwuche.html
@@ -13,15 +13,15 @@
 
 <!-- start banner_x -->
 		<div class="banner_x center">
-			<a href="./index.html" target="_blank"><div class="logo fl"></div></a>
+			<a href="{% url 'index' %}" target="_blank"><div class="logo fl"></div></a>
 			
 			<div class="wdgwc fl ml40">我的购物车</div>
 			<div class="wxts fl ml20">温馨提示：产品是否购买成功，以最终下单为准哦，请尽快结算</div>
 			<div class="dlzc fr">
 				<ul>
-					<li><a href="./login.html" target="_blank">登录</a></li>
+{#					<li><a href="./login.html" target="_blank">登录</a></li>#}
 					<li>|</li>
-					<li><a href="./register.html" target="_blank">注册</a></li>	
+{#					<li><a href="./register.html" target="_blank">注册</a></li>	#}
 				</ul>
 				
 			</div>
@@ -32,43 +32,45 @@
 			<div class="gwcxd center">
 				<div class="top2 center">
 					<div class="sub_top fl">
-						<input type="checkbox" value="quanxuan" class="quanxuan" />全选
+{#						<input type="checkbox" value="quanxuan" class="quanxuan" />全选#}
 					</div>
 					<div class="sub_top fl">商品名称</div>
 					<div class="sub_top fl">单价</div>
 					<div class="sub_top fl">数量</div>
 					<div class="sub_top fl">小计</div>
-					<div class="sub_top fr">操作</div>
+{#					<div class="sub_top fr">操作</div>#}
 					<div class="clear"></div>
 				</div>
+                {% for i in mygouwuche %}
 				<div class="content2 center">
 					<div class="sub_content fl ">
-						<input type="checkbox" value="quanxuan" class="quanxuan" />
+{#						<input type="checkbox" value="quanxuan" class="quanxuan" />#}
 					</div>
-					<div class="sub_content fl"><img src="{% static 'image/gwc_xiaomi6.jpg' %}"></div>
-					<div class="sub_content fl ft20">小米6全网通6GB内存+64GB 亮黑色</div>
-					<div class="sub_content fl ">2499元</div>
+					<div class="sub_content fl"><img src="{{ MEDIA_URL }}{{ i.phone.img }}" width="50px" height="50px"></div>
+					<div class="sub_content fl ft20">{{ i.phone.title }}</div>
+					<div class="sub_content fl ">{{ i.phone.price }}</div>
 					<div class="sub_content fl">
-						<input class="shuliang" type="number" value="1" step="1" min="1" >
+						<input class="shuliang" type="number" value="{{ i.number }}" step="1" min="1" >
 					</div>
-					<div class="sub_content fl">2499元</div>
-					<div class="sub_content fl"><a href="">×</a></div>
+					<div class="sub_content fl">{%  widthratio i.phone.price 1 i.number %}</div>
+{#					<div class="sub_content fl"><a href="">×</a></div>#}
 					<div class="clear"></div>
 				</div>
-				<div class="content2 center">
-					<div class="sub_content fl ">
-						<input type="checkbox" value="quanxuan" class="quanxuan" />
-					</div>
-					<div class="sub_content fl"><img src="{% static 'image/gwc_xiaomi6.jpg' %}"></div>
-					<div class="sub_content fl ft20">小米6全网通6GB内存+64GB 亮黑色</div>
-					<div class="sub_content fl ">2499元</div>
-					<div class="sub_content fl">
-						<input class="shuliang" type="number" value="1" step="1" min="1" >
-					</div>
-					<div class="sub_content fl">2499元</div>
-					<div class="sub_content fl"><a href="">×</a></div>
-					<div class="clear"></div>
-				</div>
+                {% endfor %}
+{#				<div class="content2 center">#}
+{#					<div class="sub_content fl ">#}
+{#						<input type="checkbox" value="quanxuan" class="quanxuan" />#}
+{#					</div>#}
+{#					<div class="sub_content fl"><img src="{% static 'image/gwc_xiaomi6.jpg' %}"></div>#}
+{#					<div class="sub_content fl ft20">小米6全网通6GB内存+64GB 亮黑色</div>#}
+{#					<div class="sub_content fl ">2499元</div>#}
+{#					<div class="sub_content fl">#}
+{#						<input class="shuliang" type="number" value="1" step="1" min="1" >#}
+{#					</div>#}
+{#					<div class="sub_content fl">2499元</div>#}
+{#					<div class="sub_content fl"><a href="">×</a></div>#}
+{#					<div class="clear"></div>#}
+{#				</div>#}
 			</div>
 			<div class="jiesuandan mt20 center">
 				<div class="tishi fl ml20">
@@ -80,7 +82,7 @@
 					</ul>
 				</div>
 				<div class="jiesuan fr">
-					<div class="jiesuanjiage fl">合计（不含运费）：<span>2499.00元</span></div>
+					<div class="jiesuanjiage fl">合计（不含运费）：<span>{{ totle }}元</span></div>
 					<div class="jsanniu fr"><input class="jsan" type="submit" name="jiesuan"  value="去结算"/></div>
 					<div class="clear"></div>
 				</div>
@@ -93,12 +95,12 @@
 
 	
 	<!-- footer -->
-	<footer class="center">
-			
-			<div class="mt20">小米商城|MIUI|米聊|多看书城|小米路由器|视频电话|小米天猫店|小米淘宝直营店|小米网盟|小米移动|隐私政策|Select Region</div>
-			<div>©mi.com 京ICP证110507号 京ICP备10046444号 京公网安备11010802020134号 京网文[2014]0059-0009号</div> 
-			<div>违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</div>
-		</footer>
+{#	<footer class="center">#}
+{#			#}
+{#			<div class="mt20">小米商城|MIUI|米聊|多看书城|小米路由器|视频电话|小米天猫店|小米淘宝直营店|小米网盟|小米移动|隐私政策|Select Region</div>#}
+{#			<div>©mi.com 京ICP证110507号 京ICP备10046444号 京公网安备11010802020134号 京网文[2014]0059-0009号</div> #}
+{#			<div>违法和不良信息举报电话：185-0130-1238，本网站所列数据，除特殊说明，所有数据均出自我司实验室测试</div>#}
+{#		</footer>#}
 
 	</body>
 </html>
