--- a/templates/xiangqing.html
+++ b/templates/xiangqing.html
@@ -55,7 +55,7 @@
 
 <!-- start banner_x -->
 		<div class="banner_x center">
-			<a href="./index.html" target="_blank"><div class="logo fl"></div></a>
+			<a href="{% url 'index' %}" target="_blank"><div class="logo fl"></div></a>
 			<a href=""><div class="ad_top fl"></div></a>
 			<div class="nav fl">
 				<ul>
@@ -150,9 +150,9 @@
 				<div class="bot mt20 ft20 ftbc">总计：{{ phone.price }}元</div>
 			</div>
 			<div class="xiadan ml20 mt20">
-					<input class="jrgwc"  type="button" name="jrgwc" value="立即选购"  />
+{#					<input class="jrgwc"  type="button" name="jrgwc" value="立即选购"  />#}
 {#					<input class="jrgwc" type="button" name="jrgwc" value="加入购物车"  onclick="{% url 'gouwuche' %}"/>#}
-                    <a class="jrgwc"  href="{% url 'gouwuche' %}">加入购物车</a>
+                    <a class="jrgwc"  href="{% url 'addgouwuche' %}">加入购物车</a>
 				
 			</div>
 		</div>
