--- a/templates/index.html
+++ b/templates/index.html
@@ -1410,7 +1410,7 @@
 	<!-- start danpin -->
 		<div class="danpin center">
 			
-			<div class="biaoti center">小米明星单品</div>
+			<div class="biaoti center">小米热门单品</div>
 			<div class="main center">
                 {% for i in star_phones|slice:'0:5' %}
 				<div class="mingxing fl">
