--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                             {% if request.user.is_anonymous %}
                                 <li><a href="">消息通知</a></li>
                             {% else %}
-                                <li><a href="{% url 'dingdan' %}">订单中心</a></li>
+                                <li><a href="{% url 'pinglunzhuanqu' %}">评论专区</a></li>
                             {% endif %}
 
 						</ul>
