--- a/templates/gouwuche.html
+++ b/templates/gouwuche.html
@@ -75,9 +75,9 @@
 			<div class="jiesuandan mt20 center">
 				<div class="tishi fl ml20">
 					<ul>
-						<li><a href="./liebiao.html">继续购物</a></li>
+{#						<li><a href="./liebiao.html">继续购物</a></li>#}
 						<li>|</li>
-						<li>共<span>2</span>件商品，已选择<span>1</span>件</li>
+{#						<li>共<span>2</span>件商品，已选择<span>1</span>件</li>#}
 						<div class="clear"></div>
 					</ul>
 				</div>
