--- a/templates/xiangqing.html
+++ b/templates/xiangqing.html
@@ -43,7 +43,7 @@
                     <li>|</li>
                     <li><a href="./register.html" target="_blank">注册</a></li>
                     <li>|</li>
-                    <li><a href="">消息通知</a></li>
+                    <li><a href="{% url 'pinglunzhuanqu' %}">评论专区</a></li>
                 </ul>
             </div>
             <div class="clear"></div>
